[gd_scene load_steps=3 format=3 uid="uid://b4pqfioq72qfj"]

[ext_resource type="Script" uid="uid://cg1gyjfpn4wyj" path="res://Scripts/Player/camera.gd" id="1_8yjwa"]
[ext_resource type="PackedScene" uid="uid://dyefr0parhhbo" path="res://Scenes/UI/feather_counter.tscn" id="2_2ffh2"]

[node name="Camera" type="Camera2D"]
process_mode = 3
z_index = 10
script = ExtResource("1_8yjwa")

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 0.95
one_shot = true

[node name="shake_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="FeatherCounter" parent="." instance=ExtResource("2_2ffh2")]
offset_left = -80.0
offset_top = -60.0
offset_right = -80.0
offset_bottom = -60.0

[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
[connection signal="timeout" from="shake_timer" to="." method="_on_shake_timer_timeout"]
